--- a/doc/ch8/ch8-3.md
+++ b/doc/ch8/ch8-3.md
@@ -1,8 +1,8 @@
 ## 8.7~8.8 원주율 외우기 (문제 ID: PI, 난이도: 하)
-### 해결과정
+#### 해결과정
   ![](images/10-18-1.jpg)
   ![](images/10-18-2.jpg)
-### 소스코드
+#### 소스코드
   ```
   #include <iostream>
   #include <cstring>
@@ -60,11 +60,11 @@
   }
   ```
 ## 8.9~8.19 Quantization (문제 ID: QUANTIZE, 난이도: 중)
-### 해결과정
+#### 해결과정
   ![](images/10-18-3.jpg)  
   ![](images/10-18-4.jpg)  
   ![](images/10-18-5.jpg)  
-### 소스코드
+#### 소스코드
   ```c++
   #include <iostream>
   #include <algorithm>
@@ -130,10 +130,10 @@
   ```
 ## 8.11 경우의 수와 확률
 ### 예제: 타일링 방법의 수 세기 (문제 ID: TILING2, 난이도: 하)
-### 해결과정
+#### 해결과정
   ![](images/10-18-6.jpg)  
   ![](images/10-18-7.jpg)  
-### 소스코드  
+#### 소스코드  
   ```
 #include <iostream>
 #include <cstring>
@@ -161,9 +161,9 @@ int main() {
 }
   ```
 ### 예제: 삼각형 위의 최대 경로 개수 세기 (문제 ID: TRIPATHCNT, 난이도: 중)
-### 해결과정
+#### 해결과정
   ![](images/10-18-8.jpg)  
-### 소스코드
+#### 소스코드
   ```
   #include <iostream>
   #include <cstring>
