--- a/doc/ch8/ch8-3.md
+++ b/doc/ch8/ch8-3.md
@@ -1,5 +1,6 @@
 ## 8.7~8.8 원주율 외우기 (문제 ID: PI, 난이도: 하)
 #### 해결과정
+  ![](images/10-18-0.jpg)
   ![](images/10-18-1.jpg)
   ![](images/10-18-2.jpg)
 #### 소스코드
