--- a/doc/ch8/ch8-3.md
+++ b/doc/ch8/ch8-3.md
@@ -3,7 +3,7 @@
   ![](images/10-18-1.jpg)
   ![](images/10-18-2.jpg)
 #### 소스코드
-  ```
+  ```c++
   #include <iostream>
   #include <cstring>
 
@@ -132,8 +132,9 @@
 #### 해결과정
   ![](images/10-18-6.jpg)  
   ![](images/10-18-7.jpg)  
+
 #### 소스코드  
-  ```
+  ```c++
 #include <iostream>
 #include <cstring>
 
@@ -142,6 +143,7 @@ using namespace::std;
 const int MOD = 1000000007;
 int cache[6];
 
+//가로폭 width일 때, 배치할 수 있는 경우의 수를 리턴
 int tiling(int width) {
   if(width <= 1) 
     return 1;
@@ -159,11 +161,71 @@ int main() {
   std::cout << tiling(5) << std::endl;
 }
   ```
+
+
+
+#### 다른 접근 방법 : 재귀적으로 생각하지 않고, 바로 전부 세어보기.
+
+모두 1칸 = <sub>n</sub>C<sub>0</sub>
+
+가로로 누워있는 것이 1개 = <sub>n-1</sub>C<sub>1</sub>
+
+가로로 누워있는 것이 2개 = <sub>n-2</sub>C<sub>2</sub>
+
+......
+
+<sub>n</sub>C<sub>r</sub>에서 n>=r일 경우를 모두 합하면 된다.
+
+![](images/1.png)
+
+```c++
+#include <iostream>
+#include "cstring"
+using namespace std;
+
+int mod = 1000000007;
+int cache[101][101];
+int nCr(int n, int r) {
+    if(n==r || r==0) return 1;
+    
+    int& ret = cache[n][r];
+    if(ret!=-1) return ret;
+    
+    return ret = ( nCr(n-1, r) + nCr(n-1, r-1) ) % mod;
+}
+
+int main(int argc, const char * argv[]) {
+    memset(cache, -1, sizeof(int) * 101 * 101);
+    
+    int c; cin >> c;
+    
+    while (c--) {
+        int n; cin >> n;
+        
+        int sum = 0;
+        int r = 0;
+        while (n>=r) { // nC0 + n-1C1 + n-2C2 + ...
+            sum += nCr(n, r);
+            sum = sum % mod;
+            n--;
+            r++;
+        }
+        cout << sum << endl;
+    }
+
+    return 0;
+}
+
+```
+
+
+
 ### 예제: 삼각형 위의 최대 경로 개수 세기 (문제 ID: TRIPATHCNT, 난이도: 중)
+
 #### 해결과정
   ![](images/10-18-8.jpg)  
 #### 소스코드
-  ```
+  ```c++
   #include <iostream>
   #include <cstring>
   using namespace::std;
@@ -172,6 +234,7 @@ int main() {
   int cache[4][4];
   int countCache[4][4];
 
+	//y,x에서 시작해서 맨 밑에까지 합을 리턴.
   int path2(int y, int x) {
     if(y == n-1)
       return triangle[y][x];
@@ -182,7 +245,8 @@ int main() {
 
     return ret = max(path2(y+1, x), path2(y+1, x+1)) + triangle[y][x];
   }
-  
+
+	//y,x에서 시작해서 맨 밑에까지 합이 최대인 경우의 수를 리턴.  
   int count(int y, int x) {
     if(y == n-1)
       return 1;
