발표순서 변경. ch8-4 설명 일부 수정. (#8)

--- a/doc/ch8/ch8-4.md
+++ b/doc/ch8/ch8-4.md
@@ -42,7 +42,7 @@
 using namespace std;
 
 //책의 풀이 : 116 msec
-//days동안 climbed만큼 올라왔을 때 남은 m일 동안 더 올라가서 n미터를 넘을 확률을 리턴하는 함수.
+//days동안 climbed만큼 올라왔을 때 m일 동안 올라가서 n미터를 넘을 확률을 리턴하는 함수.
 static double cache_snail_book[1001][2001];//days, climbed
 double snail_book(int n, int m, int days, int climbed) {
     if(days==m) {
@@ -80,7 +80,8 @@ double snail(int n, int m) {
     if (n>2*m) return 0.0;
 
     if (m==1) {
-        if(n==1) return 0.25;
+        //if(n==1) return 0.25;
+	      if(n==1) return 1.0;//사실 첫 라인의 코드에서 걸려서 여기로 올 수가 없다. 개념적으로는 1.0이 맞다.
         if(n==2) return 0.75;
     }
 
@@ -115,7 +116,7 @@ int main(int argc, const char * argv[]) {
 #endif
         
         //책의 풀이 : 116 msec
-        //days동안 climbed만큼 올라왔을 때 남은 m일 동안 더 올라가서 n미터를 넘을 확률을 리턴하는 함수.
+        //days동안 climbed만큼 올라왔을 때 m일 동안 올라가서 n미터를 넘을 확률을 리턴하는 함수.
         if(0) {
             for (int i=0; i<1001; ++i) {
                 for (int j=0; j<2001; ++j) {
@@ -336,6 +337,12 @@ int main(int argc, const char * argv[]) {
   ![6](images/6.JPG)
 
 
+
+- Floyd-Warshall 알고리즘 찾아보자!
+
+- Markov Chain도 ......
+
+  
 
 - 재귀적으로 함수를 정의해보자!
   - **d일 후에 q마을에 있을 확률를 리턴하는 함수를 정의!**
