--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -3,8 +3,8 @@
 * Why?: *최적화*
 
 * Idea:
- > 연속된 구간합을 구해서 그때그때마다 구간합을 구하면 O(N)의 시간 복잡도를 갖는다.
- > (score[a]부터 score[b]까지를 순회하며 각수를 더해야 하기 떄문이다.)
- > 하지만, 누적합(partialSum)을 이용하면 연속된 구간합(partialSum[b] - partialSum[a-1])을 O(1)만에 구할 수 있다.
+  > 연속된 구간합을 구해서 그때그때마다 구간합을 구하면 O(N)의 시간 복잡도를 갖는다.
+  (score[a]부터 score[b]까지를 순회하며 각수를 더해야 하기 떄문이다.)
+  하지만, 누적합(partialSum)을 이용하면 연속된 구간합(partialSum[b] - partialSum[a-1])을 O(1)만에 구할 수 있다.
 
 
