--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -39,3 +39,9 @@ int rangeSum(const vector<int>& pSum, int a, int b) {
   return pSum[b] - pSun[a-1];
 }
 ```
+
+* 응용 1: 임의의 a, b 연속된 구간 평균 구하기
+![average.jpg](images/average.jpg)
+
+* 응용 2: 임의의 a, b 연속된 구간 분산 구하기
+![variance.jpg](images/variance.jpg)
