--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -43,5 +43,33 @@ int rangeSum(const vector<int>& pSum, int a, int b) {
 * 응용 1: 임의의 a, b 연속된 구간 평균 구하기
 ![average.jpg](images/average.jpg)
 
+
+
 * 응용 2: 임의의 a, b 연속된 구간 분산 구하기
 ![variance.jpg](images/variance.jpg)
+
+* Code 17.2 제곱의 부분합을 계산해주는 함수(squarePartialSum)와 이를 이용해 특정 구간의 분산을 계산하는 함수
+```c++
+//주어진 벡터 a의 부분 제곱 합을 계산
+vector<int> squarePartialSum(const vector<int>& a) {
+  //1. partialSum vector 생성
+  vector<int> ret(a.size());
+  //2. 첫번째 Index 값 복사
+  ret[0] = a[0] * a[0];
+  //3. 두번째 Index 부터 순회하여 Sqaure Partial Sum 계산 
+  for(int i = 1; i < a.size(); i++)
+    ret[i] = ret[i-1] + a[i] * a[i];
+   
+  //4. 계산한 Partial Sum Vector return
+  return ret;
+}
+
+//A[]의 제곱의 부분 합 벡터 sqpsum, A[]의 부분 합 벡터 psum이 주어질때
+//A[a,b]의 분산을 반환한다 (sqpSum은 squarePartialSum()을 통해, psum은 partialSum을 통해 사전 계산한다.)
+double variance(const vector<int>& sqpsum,
+                const vector<int>& psum, int a, int b) {
+  //1. 구간의 평균을 계산
+  double mean = rangeSum(psum, a , b) / double(b - a + 1);
+  double ret = rangeSum(sqpsum, a, b) - 2 * mean + rangeSum(psum, a, b);
+}
+```
