--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -1,6 +1,6 @@
 # 17장. 부분 합
 ## 17.1 도입
-* Why?: *최적화*
+* Why?: *최적화*, memoization?
 
 * Idea:
   > 연속된 구간합을 구해서 그때그때마다 구간합을 구하면 O(N)의 시간 복잡도를 갖는다.
@@ -43,12 +43,19 @@ int rangeSum(const vector<int>& pSum, int a, int b) {
 * 응용 1: 임의의 a, b 연속된 구간 평균 구하기
 ![average.jpg](images/average.jpg)
 
-
+* Code 17.2 제곱의 부분합을 계산해주는 함수(squarePartialSum)와 이를 이용해 특정 구간의 분산을 계산하는 함수
+```c++
+//A[]의 부분 합 벡터 psum이 주어질때 A[a,b]의 평균을 반환한다
+double mean(const vector<int>& psum, int a, int b) {
+  //1. 구간합을 사용하여 평균을 계산
+  return rangeSum(psum, a , b) / double(b - a + 1);
+}
+```
 
 * 응용 2: 임의의 a, b 연속된 구간 분산 구하기
 ![variance.jpg](images/variance.jpg)
 
-* Code 17.2 제곱의 부분합을 계산해주는 함수(squarePartialSum)와 이를 이용해 특정 구간의 분산을 계산하는 함수
+* Code 17.3 제곱의 부분합을 계산해주는 함수(squarePartialSum)와 이를 이용해 특정 구간의 분산을 계산하는 함수(variance)
 ```c++
 //주어진 벡터 a의 부분 제곱 합을 계산
 vector<int> squarePartialSum(const vector<int>& a) {
@@ -69,7 +76,8 @@ vector<int> squarePartialSum(const vector<int>& a) {
 double variance(const vector<int>& sqpsum,
                 const vector<int>& psum, int a, int b) {
   //1. 구간의 평균을 계산
-  double mean = rangeSum(psum, a , b) / double(b - a + 1);
-  double ret = rangeSum(sqpsum, a, b) - 2 * mean + rangeSum(psum, a, b);
+  double mean = mean(psum, a , b);
+  double ret = rangeSum(sqpsum, a, b) - 2 * mean + rangeSum(psum, a, b) + (b - a + 1) * mean * mean;
+  return ret / (b - a + 1);
 }
 ```
