--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -43,9 +43,9 @@ int rangeSum(const vector<int>& pSum, int a, int b) {
 * 응용 1: 임의의 a, b 연속된 구간 평균 구하기
 ![average.jpg](images/average.jpg)
 
-* Code 17.2 제곱의 부분합을 계산해주는 함수(squarePartialSum)와 이를 이용해 특정 구간의 분산을 계산하는 함수
+* Code 17.2 부분합을 계산해주는 함수(ㅔartialSum)를 이용해 특정 구간의 평균을 계산하는 함수(mean)
 ```c++
-//A[]의 부분 합 벡터 psum이 주어질때 A[a,b]의 평균을 반환한다
+//A[]의 부분 합 벡터 psum이 주어질때 A[a,b]의 평균을 반환한다(psum은 partialSum을 통해 구한다.)
 double mean(const vector<int>& psum, int a, int b) {
   //1. 구간합을 사용하여 평균을 계산
   return rangeSum(psum, a , b) / double(b - a + 1);
