--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -7,9 +7,8 @@
     score[a]부터 score[b]까지를 순회하며 각수를 더해야 하기 때문이다.
     하지만, 누적합(partialSum)을 이용하면 연속된 구간합(partialSum[b] - partialSum[a-1])을 O(1)만에 구할 수 있다.
 
-  #### Example 1: 배열 score[]의 각 원소와 해당 배열의 부분합
-  
-  
+  - Example 1: 배열 score[]의 각 원소와 해당 배열의 부분합
+
     i | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 
     ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ----
     score | 100 | 97 | 86 | 79 | 66 | 52 | 49 | 42 | 31
