--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -17,8 +17,11 @@
     - partialSum을 미리 계산해 두면 score[]의 특정 구간의 합을 O(1)에 구할 수 있음.
     - partialSum[b] - partialSum[a-1] (단, partialSum[-1] = 0)
 
-    * Code 17.1 부분합을 계산해주는 함수(partialSum)와 이를 이용해 구간합을 계산하는 함수
+    
     ```c++
+    /* 
+     * Code 17.1 부분합을 계산해주는 함수(partialSum)와 이를 이용해 구간합을 계산하는 함수
+     */
     //주어진 벡터 a의 부분합을 계산
     vector<int> partialSum(const vector<int>& a) {
       //1. partialSum vector 생성
@@ -33,24 +36,26 @@
       return ret;
     }
 
-//어떤 벡터의 부분합 pSum[]이 주어질 때, 원래 벡터의 a부터 b까지의 합을 구한다.
-int rangeSum(const vector<int>& pSum, int a, int b) {
-  if(a == 0)  return psum[b];
-  return pSum[b] - pSun[a-1];
-}
-```
+    //어떤 벡터의 부분합 pSum[]이 주어질 때, 원래 벡터의 a부터 b까지의 합을 구한다.
+    int rangeSum(const vector<int>& pSum, int a, int b) {
+      if(a == 0)  return psum[b];
+      return pSum[b] - pSun[a-1];
+    }
+    ```
 
-* 응용 1: 임의의 a, b 연속된 구간 평균 구하기
+#### 응용 1: 임의의 a, b 연속된 구간 평균 구하기
 ![average.jpg](images/average.jpg)
 
-* Code 17.2 부분합을 계산해주는 함수(ㅔartialSum)를 이용해 특정 구간의 평균을 계산하는 함수(mean)
-```c++
-//A[]의 부분 합 벡터 psum이 주어질때 A[a,b]의 평균을 반환한다(psum은 partialSum을 통해 구한다.)
-double mean(const vector<int>& psum, int a, int b) {
-  //1. 구간합을 사용하여 평균을 계산
-  return rangeSum(psum, a , b) / double(b - a + 1);
-}
-```
+    ```c++
+    /*
+     * Code 17.2 부분합을 계산해주는 함수(ㅔartialSum)를 이용해 특정 구간의 평균을 계산하는 함수(mean)
+     */
+    //A[]의 부분 합 벡터 psum이 주어질때 A[a,b]의 평균을 반환한다(psum은 partialSum을 통해 구한다.)
+    double mean(const vector<int>& psum, int a, int b) {
+      //1. 구간합을 사용하여 평균을 계산
+      return rangeSum(psum, a , b) / double(b - a + 1);
+    }
+    ```
 
 * 응용 2: 임의의 a, b 연속된 구간 분산 구하기
 ![variance.jpg](images/variance.jpg)
