--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -57,11 +57,13 @@ double mean(const vector<int>& psum, int a, int b) {
 }
 ```
 
-* 응용 2: 임의의 a, b 연속된 구간 분산 구하기
+#### 응용 2: 임의의 a, b 연속된 구간 분산 구하기
 ![variance.jpg](images/variance.jpg)
 
-* Code 17.3 제곱의 부분합을 계산해주는 함수(squarePartialSum)와 이를 이용해 특정 구간의 분산을 계산하는 함수(variance)
 ```c++
+/*
+ * Code 17.3 제곱의 부분합을 계산해주는 함수(squarePartialSum)와 이를 이용해 특정 구간의 분산을 계산하는 함수(variance)
+ */
 //주어진 벡터 a의 부분 제곱 합을 계산
 vector<int> squarePartialSum(const vector<int>& a) {
   //1. partialSum vector 생성
