--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -90,4 +90,9 @@ double variance(const vector<int>& sqpsum,
 ```
 
 #### 2차원으로 확장
+#####A[y1, x1]에서 A[y2, x2]까지의 직사각형 구간합 구하기
+![1.gif](images/1.gif)
+> psum[y,x]는 (0,0)을 왼쪽 위칸, (y,x)를 오른쪽 아래 칸으로 갖는 직사각형 구간에 포함된 모든 
+![0.jpeg](images/0.jpeg)
 
+![2.gif](images/2.gif)
