--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -90,9 +90,24 @@ double variance(const vector<int>& sqpsum,
 ```
 
 #### 2차원으로 확장
-#####A[y1, x1]에서 A[y2, x2]까지의 직사각형 구간합 구하기
+##### A[y1, x1]에서 A[y2, x2]까지의 직사각형 구간합 구하기
 ![1.gif](images/1.gif)
 > psum[y,x]는 (0,0)을 왼쪽 위칸, (y,x)를 오른쪽 아래 칸으로 갖는 직사각형 구간에 포함된 모든 
 ![0.jpeg](images/0.jpeg)
 
 ![2.gif](images/2.gif)
+
+```c++
+/*
+ * Code 17.4 부분 합을 이용해 2차원 배열의 구간 합을 구하는 함수의 구현
+ */
+//어떤 2차원 배열 A[][]의 부분합 psum[][]이 주어질 때
+//A[y1,x1]과 A[y2,x2]를 양 끝으로 갖는 부분 배열의 합을 반환한다.
+int gridSum(const vector<vector<int>>& psum, int y1, int x1, int y2, int x2) {
+    int ret = psum[y2][x2];
+    if(y1 > 0) ret -= psum[y1-1][x2];
+    if(x1 > 0) ret -= psum[y2][x1-1];
+    if(y1 >0 && x1 > 0) ret += psum[y1-1][x1-1];
+    return ret;
+}
+```
