--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -111,3 +111,8 @@ int gridSum(const vector<vector<int>>& psum, int y1, int x1, int y2, int x2) {
     return ret;
 }
 ```
+
+#### 예제: 합이 0에 가장 가까운 구간
+
+score | 100 | 97 | 86 | 79 | 66 | 52 | 49 | 42 | 31
+partialSum | 100 | 197 | 283 | 362 | 428 | 480 | 529 | 571 | 602
