--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -112,8 +112,12 @@ int gridSum(const vector<vector<int>>& psum, int y1, int x1, int y2, int x2) {
 }
 ```
 
-#### 예제: 합이 0에 가장 가까운 구간
+#### 예제: 합이 0에 가장 가까운 구간의 합을 구하라
 
 i | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
 ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ----
 A[i] | -14 | 7 | 2 | 3 | -8 | 4 | -6 | 8 | 9 | 11
+
+
+#####Hint) 구간의 합이 0에 가장 가깝다? -> 구간합의 차이가 가장 적다.
+
