--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -112,12 +112,65 @@ int gridSum(const vector<vector<int>>& psum, int y1, int x1, int y2, int x2) {
 }
 ```
 
-#### 예제: 합이 0에 가장 가까운 구간의 합을 구하라
+#### 예제 1: 합이 0에 가장 가까운 구간의 합을 구하라
 
 i | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
 ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ----
 A[i] | -14 | 7 | 2 | 3 | -8 | 4 | -6 | 8 | 9 | 11
 
 
-#####Hint) 구간의 합이 0에 가장 가깝다? -> 구간합의 차이가 가장 적다.
+#### 예제 1 풀이:
 
+![ex1.png](images/ex1.png)
+Hint) 구간의 합이 0에 가장 가깝다? -> 구간합의 차이가 가장 적다
+
+i | 0 | 6 | 4 | 1 | 5 | 2 | 7 | 3 | 8 | 9
+---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ----
+psum[i] | -14 | -12 | -10 | -7 | -6 | -5 | -4 | -2 | 5 | 16
+
+```c++
+//
+//  parialSum.cpp
+//
+//  Created by 김지훈 on 2019/11/15.
+//  Copyright © 2019 JuneKim. All rights reserved.
+//
+
+#include <iostream>
+#include <vector>
+#include <algorithm>
+#include <limits.h>
+
+using namespace std;
+
+bool compare(int a, int b) {
+    return a < b;
+}
+
+int main() {
+    int myarr[] = {-14,7,2,3,-8,4,-6,8,9,11};
+    int psum[10];
+    
+    //1. 누적합 계산
+    psum[0] = myarr[0];
+    for(int i = 1; i < 10; ++i) {
+        psum[i] = psum[i-1] + myarr[i];
+    }
+    
+    //2. 누적 합 정렬
+    sort(psum, psum+10, compare);
+    
+    int result = INT_MAX;
+    for(int i = 1; i < 10; i++) {
+        int partialSumDiff = psum[i] - psum[i-1];
+        if(result > partialSumDiff) {
+            result = partialSumDiff;
+        }
+    }
+    
+    //3. Print
+    cout << "Sum:" << result << endl;
+    return 0;
+}
+
+```
