--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -111,7 +111,7 @@ int gridSum(const vector<vector<int>>& psum, int y1, int x1, int y2, int x2) {
     return ret;
 }
 ```
-
+## 17.2 문제
 #### 예제 1: 합이 0에 가장 가까운 구간의 합을 구하라
 
 i | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
@@ -174,3 +174,8 @@ int main() {
 }
 
 ```
+#### 예제 2: 크리스마스 인형(문제ID: CHRISMAS)
+https://algospot.com/judge/problem/read/CHRISTMAS
+
+#### 예제 2 풀이:
+
