--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -179,3 +179,102 @@ https://algospot.com/judge/problem/read/CHRISTMAS
 
 #### 예제 2 풀이:
 
+```c++
+//
+//  main.cpp
+//  Chrismas
+//
+//  Created by 김지훈 on 2019/11/15.
+//  Copyright © 2019 JuneKim. All rights reserved.
+//
+
+#include <iostream>
+#include <vector>
+using namespace std;
+
+int test_case; // Test Case 수
+int N; // 상자의 수
+int K; //아이들 수
+//D[]의 부분 합 배열 psum[]과 k가 주어질 때, 몇 가지 방법으로 살 수 있는지 반환
+//psum[]의 첫 번째 원소 전에 0을 삽입했다고 가정
+
+int waysToBuy(const vector<int> &psum, int K)
+{
+    const int MOD = 20091101;
+    int result = 0;
+
+    //psum[]의 각 값을 몇 번이나 본 적 있는지 기록
+    vector<long long> count(K, 0);
+    for (int i = 0; i < psum.size(); i++)
+        count[psum[i]]++;
+
+    //두 번 이상 본 적 있다면 이 값 중 두 개를 선택하는 방법의 수를 더한다
+    //count[i]개 중 2개를 고를 경우의 수
+    //nC2를 더한다 (n=count[i])
+
+    for (int i = 0; i < K; i++)
+        if (count[i] >= 2)
+            result = (result + ((count[i] * (count[i] - 1)) / 2)) % MOD;
+
+    return result;
+}
+
+//D[]의 부분 합 배열 psum[]과 K가 주어질 때, 겹치지 않게 몇번이나 살 수 있는지 반환
+//psum[]의 첫 번째 원소 전에 0을 삽입했다고 가정
+int maxBuys(const vector<int> &psum, int K)
+{
+    /*
+        result[i] = i - 1번 상자까지 구매 가능한 최대 횟수
+        i - 1번째 인형을 구매하지 않거나? 구매할 경우 둘중의 최댓값을 저장
+            result[i] = max(dp[i -1], dp[최근에 psum값이 같았던 인덱스] + 1);
+     */
+
+    vector<int> result(psum.size(), 0);
+    //previous[s]=psum[]이 s였던 마지막 위치
+    vector<int> previous(K, -1);
+    for (int i = 0; i < psum.size(); i++)
+    {
+        //i번째 상자를 아예 고려하지 않는 경우
+        if (i > 0)
+            result[i] = result[i - 1];
+        else
+            result[i] = 0;
+
+        //psum[i]를 전에도 본 적이 있다면, prev[psum[i]]+1부터 현재까지 구매
+        int loc = previous[psum[i]];
+        if (loc != -1)
+            result[i] = max(result[i], result[loc] + 1);
+
+        //previous[]에 현재 위치 기록
+        previous[psum[i]] = i;
+    }
+    return result.back();
+}
+
+int main(void)
+{
+    cin >> test_case;
+
+    for (int i = 0; i < test_case; i++)
+    {
+        cin >> N >> K;
+
+        vector<int> v(N);
+
+        for (int i = 0; i < N; i++)
+            cin >> v[i];
+
+        vector<int> psum(N + 1);
+        psum[0] = 0;
+
+        //psum = 상자에 들어있는 인형들의 합을 아이들 수로 나눈 나머지
+        for (int i = 1; i <= N; i++)
+            psum[i] = (psum[i - 1] + v[i-1]) % K;
+
+        cout << waysToBuy(psum, K) << " " << maxBuys(psum, K) << endl;
+
+    }
+    return 0;
+}
+```
+
