--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -177,7 +177,10 @@ int main() {
 #### 예제 2: 크리스마스 인형(문제ID: CHRISMAS)
 https://algospot.com/judge/problem/read/CHRISTMAS
 
-#### 예제 2 풀이:
+#### 예제 2 풀이
+Hint)"H에서 T까지 구입했을때 남기지 않고 어린이들에게 나눠줄 수 있는가?"
+> (psum[T] - psum[H-1]) mod K = 0
+   -> psum[i]=∑(i번째 인형상자) % K
 
 ```c++
 //
