--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -179,8 +179,10 @@ https://algospot.com/judge/problem/read/CHRISTMAS
 
 #### 예제 2 풀이
 Hint)"H에서 T까지 구입했을때 남기지 않고 어린이들에게 나눠줄 수 있는가?"
-> (psum[T] - psum[H-1]) mod K = 0
-   -> psum[i]=∑(i번째 인형상자) % K
+(psum[T] - psum[H-1]) mod K = 0
+=> 인형의 합을 어린아이들 수로 나눈 나머지의 수가 중요 하다!
+현 문제에서의 psum의 재정의:
+0부터 i-1번쨰 상자에(상자의 수 i기 때문에) 들어있는 인형의 합을 아이들 수로 니눈 나머지 
 
 ```c++
 //
