--- a/doc/ch17/ch17.md
+++ b/doc/ch17/ch17.md
@@ -231,7 +231,7 @@ int maxBuys(const vector<int> &psum, int K)
     /*
         result[i] = i - 1번 상자까지 구매 가능한 최대 횟수
         i - 1번째 인형을 구매하지 않거나? 구매할 경우 둘중의 최댓값을 저장
-            result[i] = max(dp[i -1], dp[최근에 psum값이 같았던 인덱스] + 1);
+            result[i] = max(result[i -1], result[최근에 psum값이 같았던 인덱스] + 1);
      */
 
     vector<int> result(psum.size(), 0);
