--- a/doc/ch18/ch18.md
+++ b/doc/ch18/ch18.md
@@ -28,8 +28,10 @@
 동적 배열의 크기가 바뀌어야 할 때는 단순하게 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 참조하도록 바꿔치기 합니다.
 따라서 동적 배열 클래스는 현재 배열을 가리키는 포인터를 다음과 같이 저장
 
- '''C++ 
- int size; //배열의 크기 ElenetType* array; //실제 배열을 가리키는 포인터 
- '''
 
- ![](images/그림 18.1.PNG)
+```c++
+ int size; //배열의 크기 
+ ElenetType* array; //실제 배열을 가리키는 포인터 
+```
+
+   ![](images/18.1.png)
