--- a/doc/ch18/ch18.md
+++ b/doc/ch18/ch18.md
@@ -1,31 +1,32 @@
 ## ch18.1 도입
 
-가장 기초적인 자료 구조 : 배열
+- 가장 기초적인 자료 구조 : 배열
 
-배열 + 효율적인 작업 : 동적 배열, 링크드 리스트
+- 배열 + 효율적인 작업 : 동적 배열, 링크드 리스트
 
 ## ch18.2 동적 배열
 
-배열의 단점 : 배열의 크기 지정 필요, 그 이상의 자료를 집어 넣을 수 없다.
+- 배열의 단점 : 배열의 크기 지정 필요, 그 이상의 자료를 집어 넣을 수 없다.
 
-동적 배열 : 자료의 개수가 변함에 따라 크기가 변경되는 별도의 자료 구조.
+- 동적 배열 : 자료의 개수가 변함에 따라 크기가 변경되는 별도의 자료 구조.
 
-언어 차원에서 제공 되는 기능이 아니라 배열을 이용해 만들어 낸 별도의 자료 구조.(대개 언어의 표준 라이브러리에 포함)
-내부적으로 배열을 이용하기 때문에
+  - 언어 차원에서 제공 되는 기능이 아니라 배열을 이용해 만들어 낸 별도의 자료 구조.(대개 언어의 표준 라이브러리에 포함)
+  - 내부적으로 배열을 이용하기 때문에
 
-동적 배열 특징은 아래와 같다.
+- 동적 배열 특징은 아래와 같다.
 
-배열과 같은
+  - 배열과 같은
 
-원소들은 메모리의 연속된 위치에 저장 됩니다.
-주어진 위치의 원소를 반환하거나 변경하는 동작을 O(1)에 할 수 있다.
-배열과 다른
+  1. 원소들은 메모리의 연속된 위치에 저장 됩니다.
+  2. 주어진 위치의 원소를 반환하거나 변경하는 동작을 O(1)에 할 수 있다.
+  
+  - 배열과 다른
 
-배열의 크기를 변경하는 resize() 연산이 가능합니다. 이 동작을 수행하는 데 배열의 크기 N에 비례하는 시간이 걸립니다.
+  1. 배열의 크기를 변경하는 resize() 연산이 가능합니다. 이 동작을 수행하는 데 배열의 크기 N에 비례하는 시간이 걸립니다.
 주어진 원소를 배열의 맨 끝에 추가함으로써 크기를 1 늘리는 append() 연산을 지원합니다. 이 동작을 수행 하는 데는 상수 시간이 걸립니다.
 이와 같은 연산들을 구현하기 위해 동적 배열은 동적으로 할당 받은 배열을 사용
 
-동적 배열의 크기가 바뀌어야 할 때는 단순하게 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 참조하도록 바꿔치기 합니다.
+  2. 동적 배열의 크기가 바뀌어야 할 때는 단순하게 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 참조하도록 바꿔치기 합니다.
 따라서 동적 배열 클래스는 현재 배열을 가리키는 포인터를 다음과 같이 저장
 
 
@@ -34,4 +35,4 @@
  ElenetType* array; //실제 배열을 가리키는 포인터 
 ```
 
-   ![](images/18.1.png)
+   ![](images/18.1.PNG)
