--- a/doc/ch18/ch18.md
+++ b/doc/ch18/ch18.md
@@ -27,12 +27,78 @@
 이와 같은 연산들을 구현하기 위해 동적 배열은 동적으로 할당 받은 배열을 사용
 
   2. 동적 배열의 크기가 바뀌어야 할 때는 단순하게 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 참조하도록 바꿔치기 합니다.
-따라서 동적 배열 클래스는 현재 배열을 가리키는 포인터를 다음과 같이 저장
-
+  
+ - 따라서 동적 배열 클래스는 현재 배열을 가리키는 포인터를 다음과 같이 저장
 
 ```c++
  int size; //배열의 크기 
  ElenetType* array; //실제 배열을 가리키는 포인터 
 ```
+____________
 
-   ![](images/18.1.PNG)
+![](images/18.1.PNG)
+
+ - 새 배열을 할당 받고 기존 자료를 복사하는 데는 배열의 크기에 비례하는 시간이 걸리므로, resize() 연산을 O(N)에 구현한다는 요구 조건을 만족
+ 
+ - append() 함수를 어떻게 상수로 구현?
+ 
+ 아래 함수는 O(1)로 구현 가능. 
+ 
+ ``` C++
+ //append(newValue)의 일부
+ array[size++] = newValue;
+ ```
+ 
+ 
+ 
+ ![](images/18.2.PNG)
+ 
+ https://noahlogs.tistory.com/29
+ __________
+ 
+ ## 18.3 연결 리스트
+ 
+  - 배열 원소들의 순서를 유지하면서 임의의 위치에 원소를 삽입하거나, 임의의 위치에서 원소를 삭제하는 것은 시간이 오래 걸리는 작업.
+    - 해당 위치 뒤에 있는 원소들을 하나씩 뒤칸 혹은 앞칸으로 모두 옮겨야 하기 때문에
+    
+  - 이와 같은 문제를 해결하기 위해 고안된 자료 구조가 연결 리스트
+    - 특정 위치에서의 삽입과 삭제를 상수 시간에 할 수 있게 해줌.
+    - 배열은 메모리의 연속된 위치에 각 원소들이 저장되어 있다면, 연결 리스트는 원소들이 메모리 여기 저기 흩어져 있고,
+    각 원소들이 이전과 다음 원소를 가리키는 포인터를 가지고 있는 방식으로 구현
+    
+   
+    
+   ![배열과 연결 리스트의 차이](images/18.3.PNG)
+    
+        ``` C++
+    struct ListNode {
+      int element; //담고 있는 원소
+      ListNode *prev, *next; //
+      }
+    ```
+
+   #### 연결 리스트 다루기
+  
+    - 연결 리스트는 배열과 달리 메모리 여기저기에 노드들이 흩어져 있기 때문에 i 번째 노드를 찾아 내려면 리스트의
+    머리에서 부터 시작해 하나씩 포인터를 따라가며 다음 노드를 찾아야한다.
+    i 번째 노드를 찾는 데 드는 시간은 리스트의 길이에 선형 비례함.
+    
+  - 반면 순서를 유지 하면서 새 노드를 삽입하거나 기존 노드를 삭제하는 작업은 아주 간단하다.
+    - 노드들의 순서가 포인터에 의해 정의 되기 때문에, 다른 노드들은 그대로 두고, 삽입/삭제할 노드와 이전/이후 노드의 포인터만 바꾸면 된다.
+    - 그림 18.4 는 노드에서 삭제할 때 추가할 때를 보여준다.
+  
+   ![](images/18.4.PNG)
+   
+   #### 표준 라이브러리의 연결 리스트 구현
+   
+    - C++ : STL의 List
+    - JAVA와 C# : LinkedList
+    
+   #### 연결 리스트 응용 연산들
+   
+    - 잘라 붙이기 연산
+    
+   ![](images/18.5.PNG)
+   
+   
+    
