--- a/doc/ch18/ch18.md
+++ b/doc/ch18/ch18.md
@@ -3,6 +3,7 @@
 - 가장 기초적인 자료 구조 : 배열
 
 - 배열 + 효율적인 작업 : 동적 배열, 링크드 리스트
+______________
 
 ## ch18.2 동적 배열
 
@@ -100,5 +101,98 @@ ____________
     
    ![](images/18.5.PNG)
    
+    - 삭제했던 원소 돌려 놓기
+    
+    ```c++
+    
+    //node 이전/이후 노드의 포인터를 바꿔서 node를 리스트에서 삭제한다.
+    void deleteNode(ListNode* node){
+       node->prev->next = node->next;
+       node->next->prev = node->prev;
+    }
+    
+    //node 이전/이후 노드의 포인터를 바꿔서 자기 자신을 다시 리스트에 삽입한다.
+    void recoverNode(ListNode* node){
+       node->prev->next = node;
+       node->next->prev = node;
+       
+       
+   ## 18.4 동적배열과 연결 리스트의 비교
+    
+    - 동적 배열과 연결 리스트의 가장 큰 차이점
+      - 삽입과 삭제 그리고 임의의 원소에 접근하는 데 드는 시간
+        - 배열의 끝에서만 하면 될 경우에는 동적 배열이 거의 항상 더 좋은 선택
+          - 임의의 원소에 빠르게 접근할 수 있을 뿐더러, 원소들이 메모리에 연속해 배치되어 있다는 점이 CPU 캐시의 효율도 더 높여 주기 때문.
+          - 만약 모든 원소들을 순회하며 삽입과 삭제를 한다면 연결 리스트가 좋은 선택
+       
+      - 두 자료 구조가 필요로 하는 수행 시간
+       ![](images/3.PNG)
+   ## 18.5 조세푸스 문제(문제 ID : JOSEPHUS, 난이도 : 하 )
+   
+   
+   - 예제 입력
+   
+   2
+   6 3
+   40 3
+  
+   - 예제 출력
+   
+   3 5
+   11 26
+   
+   N = 6, K = 3
+
+예제 입출력 설명
+
+병사들은 1~6번까지, 원 형태로 앉아 있습니다. 이제 1번부터 2명이 남을 때까지 차례대로 죽여 나갈 건데, 아래 표에서 죽인다면, X를 표시해보도록 하지요. 또한, O는 죽어야 하는 놈을 가리키는 인덱스라고 하겠습니다.
+
+
+1명 쨰,
+
+| 1 | 2 | 3 | 4 | 5 | 6 |
+| X |   |   |   |   |   |
+| O |   |   |   |   |   |
+
+
+2명 째,
+
+| 1 | 2  | 3  | 4 | 5 | 6 |
+| X |    |    | X |   |   |
+|   | -> | -> | O |   |   |
+
+3명 째,
+
+| 1 | 2 | 3 | 4 | 5  | 6  |
+| X | X |   | X |    |    |
+|   | O |   |   | -> | -> |
+
+4명 째,
+
+| 1 | 2 | 3  | 4 | 5  | 6 |
+| X | X |    | X |    | X |
+|   |   | -> |   | -> | O |
    
     
+``` C++
+void josephus(int n, int k) {
+  //리스트를 준비한다.
+  list<int> survivors
+  for(int i = 1; i <=n; ++i) survivors.push_back(i);
+  // 이번에 죽을 사람을 나타내는 포인터
+  list<int>::iterator kill = survivors.begin();
+  while(n>2){
+    //첫번째 사람이 자살한다. erase()는 지운 원소의 다음 원소를 반환한다.
+    kill = survivors.erase(kill);
+    if(kill == survivors.end()) kill = survivors.begin();
+    --n;
+    //k-1번 다음 사람으로 옮긴다.
+    for(int i = 0; i < k-1; ++i;) {
+      ++kill;
+      if(kill == survivors.end()) kill = survivors.begin();
+      }
+     }
+     cout << survivors.front() << " " << survivors.back() << endl;
+    }
+
+```
