--- a/doc/ch18/ch18.md
+++ b/doc/ch18/ch18.md
@@ -30,13 +30,14 @@ ______________
   2. 동적 배열의 크기가 바뀌어야 할 때는 단순하게 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 참조하도록 바꿔치기 합니다.
   
  - 따라서 동적 배열 클래스는 현재 배열을 가리키는 포인터를 다음과 같이 저장
-
-```c++
+ 
+ ***
+``` c++
  int size; //배열의 크기 
  ElenetType* array; //실제 배열을 가리키는 포인터 
 ```
-____________
-
+ ***
+ 
 ![](images/18.1.PNG)
 
  - 새 배열을 할당 받고 기존 자료를 복사하는 데는 배열의 크기에 비례하는 시간이 걸리므로, resize() 연산을 O(N)에 구현한다는 요구 조건을 만족
@@ -45,11 +46,12 @@ ____________
  
  아래 함수는 O(1)로 구현 가능. 
  
- ``` C++
+ ***
+ ``` c++
  //append(newValue)의 일부
  array[size++] = newValue;
  ```
- 
+ ***
  
  
  ![](images/18.2.PNG)
@@ -173,7 +175,17 @@ ____________
 | X | X |    | X |    | X |
 |   |   | -> |   | -> | O |
    
-    
+   ## 18.6 풀이 : 조세푸스 문제
+   
+   - 연결 리스트로 풀 수 있는 전형적인 문제
+   
+    - 원형으로 연결된 연결 리스트 위에서 이번에 죽을 사람을 포인터 kill을 유지하면서, 이 포인터가 가리키는 사람을 죽이고 포인터를 K-1번 앞으로 옮기는 방식으로 구현
+    - 한사람 죽을 때 마다 포인터를 K-1번 옮기기 때문에, 전체 시간 복잡도는 O(NK)
+    - 이 문제는 N,K가 모두 1000 이하의 값이기 때문에 충분히 시간안에 끝낼수 있다.
+    - 한가지 문제되는 점은 표준 라이브러리에서 원형으로 연결된 연결 리스트를 제공하지 않는다.
+      - 하지만 포인터가 리스트의 끝에 도달하면 처음으로 옮겨 주는 연산을 통해 원형 리스트를 흉내 낼수 있음.
+      - 아래 코드를 보면 literator 가 끝에 도달하는 지 확인해서 처음으로 옮겨 주는 것을 볼수 있음.
+   
 ``` C++
 void josephus(int n, int k) {
   //리스트를 준비한다.
