--- a/doc/ch18/ch18.md
+++ b/doc/ch18/ch18.md
@@ -70,6 +70,26 @@ int main()
 ![](images/18.1.PNG)
 
  - 새 배열을 할당 받고 기존 자료를 복사하는 데는 배열의 크기에 비례하는 시간이 걸리므로, resize() 연산을 O(N)에 구현한다는 요구 조건을 만족
+  ***
+ ``` c++
+ // 배열 용량이 꽉 찼으면 재할당 받는다.
+ if(size == capacity){
+  //용량을 M만큼 늘린 새 배열을 할당 받는다.
+  int newCapacity = capacity + M;
+  int* newCapacity = new int[newCapacity];
+  //기존의 자료를 복사한다.
+  for(int i =0 ; i<size; ++i)
+    newArray[i] = array[i];
+  //기존 배열을 삭제하고, 새 배열로 바꿔치기한다.
+  if(array) delete [] array;
+  array = newArray;
+  capacity = newCapacity;
+ }
+ // 배열의 끝에 원소를 삽입한다.
+ array[size++] = newValue;
+ 
+ ```
+ ***
  
  - append() 함수를 어떻게 상수로 구현?
  
