--- a/doc/ch18/ch18.md
+++ b/doc/ch18/ch18.md
@@ -93,19 +93,24 @@ int main()
  
  - append() 함수를 어떻게 상수로 구현?
  
- 아래 함수는 O(1)로 구현 가능. 
+  - 아래 함수는 O(1)로 구현 가능. 
  
  ***
- ``` c++
+ 
+  ``` c++
  //append(newValue)의 일부
  array[size++] = newValue;
- ```
+  ```
  ***
  
+  - But Append() 연산 중, 동적 배열이 꽉 차게 되면 resize() 연산을 하게 되어 그 때마다 O(N)의 시간을 소비하게 된다.
+  - 어떻게 상수의 시간을 맞출까?
+    - 연산을 아주 많이 여러번 반복 하여 수행 시간의 평균을 내는 것.
+    
+   https://noahlogs.tistory.com/29
  
  ![](images/18.2.PNG)
  
- https://noahlogs.tistory.com/29
  __________
  
  ## 18.3 연결 리스트
@@ -122,13 +127,17 @@ int main()
     
    ![배열과 연결 리스트의 차이](images/18.3.PNG)
     
-        ``` C++
+    ***
+    
+  ``` c++
     struct ListNode {
       int element; //담고 있는 원소
       ListNode *prev, *next; //
       }
-    ```
-
+  ```
+    
+    ***
+    
    #### 연결 리스트 다루기
   
     - 연결 리스트는 배열과 달리 메모리 여기저기에 노드들이 흩어져 있기 때문에 i 번째 노드를 찾아 내려면 리스트의
@@ -148,13 +157,32 @@ int main()
     
    #### 연결 리스트 응용 연산들
    
+    다음 연산들은 연결 리스트를 가지고 할 수 있는 트릭이지만, 사용 범위가 매우 제한적이고 라이브러리에서 잘 지원하지 않음, 존재한다고만 알고 있으면 됨.
+   
     - 잘라 붙이기 연산
+    
+      - 원소의 삭제와 삽입을 상수 시간에 할 수 있었던 것을 응용하면 다른 리스트를 통째로 삽입하는 것 또한 상수 시간에 할 수 있다.
+      - 그림 18.5 : lg의 일부를 리스트 lotte에 끼워 넣는 연산.
+      - 이와 같은 연산을 splicing
+      - 잘라 붙이기 연산을 구현하면 상수 시간에 하나로 합치거나 할 수 있어서 유용하지만, 잘라 붙이기를 연산을 구현하면 연결 리스트의 크기를 O(1) 에 알기가 불가능 해짐.
+      - 연결 리스트에서 크기를 알수 있는 방법이 없어서 원소의 개수를 리스트 객체에서 유지하면서 새 원소를 삽입하거나 삭제 할 때마다 갱신해 줘야 하는데, 잘라 붙이기 연산을 할 때는 몇개의 원소가 추가 되는지 알 방법이 없음.
+      - 이와 같은 특성 때문에 잘라 붙이기 연산을 지원하는 연결 리스트 구현은 많지 않음.
+      - 자바나 C#에서 사용 하는 LinkedList의 구현은 잘라 붙이기 연산을 포기한 대신, 리스트의 크기를 구하는 연산을 상수 시간에 지원
+      - C ++ STL의 List는 splice() 멤버 함수를 통해 잘라 붙이기 연산을 지원하지만, 리스트의 크기를 구하려면 선형 시간의 반복문을 수행 해야만 함.
+      
     
    ![](images/18.5.PNG)
    
+   --------
+   
     - 삭제했던 원소 돌려 놓기
     
-    ```c++
+      - 양 방향 연결 리스트의 장점 : 한 번 삭제 했던 원소를 제자리에 쉽게 돌려 놓음.
+      - 노드를 삭제하는 DeleteNode() 함수를 보면 우리는 이전/이후의 포인터만 바꾸고 node에 있는 정보는 삭제 하지 않음.
+      - 그렇기에 node의 포인터들은 원래 자기가 들어가 있던 위치를 알고 있고, 노드의 위치만 알고 있어서 쉽게 자기 위치로 다시 삽입 가능.
+      - 물론 이 방법은 이전 노드나 이후 노드 또한 삭제된 상태에서 수행 하면 리스트를 망가 뜨리기 때문에, 항상 삭제한 순서의 반대로 복구가 이루어 질때 만 가능
+      
+  ```c++
     
     //node 이전/이후 노드의 포인터를 바꿔서 node를 리스트에서 삭제한다.
     void deleteNode(ListNode* node){
@@ -166,6 +194,14 @@ int main()
     void recoverNode(ListNode* node){
        node->prev->next = node;
        node->next->prev = node;
+  ```      
+       - 이 연산은 보통 프로그램에서 되돌리기(Undo) 연산을 지원하는 데 유용하게 쓸 수 있음.
+       - 되돌리기가 가장 잘 사용 되는 곳은 물론 사용자 인터 페이스
+       
+       - 11장 조합 탐색에서 사용됨.
+        - 조합 탐색에서는 답의 한 조각을 만들고, 현재의 상태를 갱신한 뒤 나머지를 재귀 호출로 해결.
+        - 재귀 호출이 끝난 후 문제의 상태는 다시 복구되어야 하는 데 되돌리기 연산을 통해 문제의 상태를 되돌리기 작업을 효율적으로 할 수 있음
+        - 이와 같은 장접을 활용한 기법 : 커누스가 이름 붙인 "춤추는 링크들" 이란 기법이 있음.
        
        
    ## 18.4 동적배열과 연결 리스트의 비교
@@ -178,6 +214,7 @@ int main()
        
       - 두 자료 구조가 필요로 하는 수행 시간
        ![](images/3.PNG)
+       
    ## 18.5 조세푸스 문제(문제 ID : JOSEPHUS, 난이도 : 하 )
    
    
