--- a/doc/ch18/ch18.md
+++ b/doc/ch18/ch18.md
@@ -69,7 +69,8 @@ int main()
  
 ![](images/18.1.PNG)
 
- - 새 배열을 할당 받고 기존 자료를 복사하는 데는 배열의 크기에 비례하는 시간이 걸리므로, resize() 연산을 O(N)에 구현한다는 요구 조건을 만족
+ - 새 배열을 할당 받고 기존 자료를 복사하는 데는 배열의 크기에 비례하는 시간이 걸리므로, resize() 연산을 O(N)에 
+ 구현한다는 요구 조건을 만족
   ***
  ``` c++
  // 배열 용량이 꽉 찼으면 재할당 받는다.
@@ -157,18 +158,22 @@ int main()
     
    #### 연결 리스트 응용 연산들
    
-    다음 연산들은 연결 리스트를 가지고 할 수 있는 트릭이지만, 사용 범위가 매우 제한적이고 라이브러리에서 잘 지원하지 않음, 존재한다고만 알고 있으면 됨.
+    다음 연산들은 연결 리스트를 가지고 할 수 있는 트릭이지만, 사용 범위가 매우 제한적이고 라이브러리에서 잘 지원하지 않음,
+    존재한다고만 알고 있으면 됨.
    
     - 잘라 붙이기 연산
     
       - 원소의 삭제와 삽입을 상수 시간에 할 수 있었던 것을 응용하면 다른 리스트를 통째로 삽입하는 것 또한 상수 시간에 할 수 있다.
       - 그림 18.5 : lg의 일부를 리스트 lotte에 끼워 넣는 연산.
       - 이와 같은 연산을 splicing
-      - 잘라 붙이기 연산을 구현하면 상수 시간에 하나로 합치거나 할 수 있어서 유용하지만, 잘라 붙이기를 연산을 구현하면 연결 리스트의 크기를 O(1) 에 알기가 불가능 해짐.
-      - 연결 리스트에서 크기를 알수 있는 방법이 없어서 원소의 개수를 리스트 객체에서 유지하면서 새 원소를 삽입하거나 삭제 할 때마다 갱신해 줘야 하는데, 잘라 붙이기 연산을 할 때는 몇개의 원소가 추가 되는지 알 방법이 없음.
+      - 잘라 붙이기 연산을 구현하면 상수 시간에 하나로 합치거나 할 수 있어서 유용하지만, 잘라 붙이기를 연산을 구현하면
+      연결 리스트의 크기를 O(1) 에 알기가 불가능 해짐.
+      - 연결 리스트에서 크기를 알수 있는 방법이 없어서 원소의 개수를 리스트 객체에서 유지하면서 새 원소를 삽입하거나 삭제 할 때마다
+      갱신해 줘야 하는데, 잘라 붙이기 연산을 할 때는 몇개의 원소가 추가 되는지 알 방법이 없음.
       - 이와 같은 특성 때문에 잘라 붙이기 연산을 지원하는 연결 리스트 구현은 많지 않음.
       - 자바나 C#에서 사용 하는 LinkedList의 구현은 잘라 붙이기 연산을 포기한 대신, 리스트의 크기를 구하는 연산을 상수 시간에 지원
-      - C ++ STL의 List는 splice() 멤버 함수를 통해 잘라 붙이기 연산을 지원하지만, 리스트의 크기를 구하려면 선형 시간의 반복문을 수행 해야만 함.
+      - C ++ STL의 List는 splice() 멤버 함수를 통해 잘라 붙이기 연산을 지원하지만, 리스트의 크기를 구하려면
+      선형 시간의 반복문을 수행 해야만 함.
       
     
    ![](images/18.5.PNG)
@@ -180,7 +185,8 @@ int main()
       - 양 방향 연결 리스트의 장점 : 한 번 삭제 했던 원소를 제자리에 쉽게 돌려 놓음.
       - 노드를 삭제하는 DeleteNode() 함수를 보면 우리는 이전/이후의 포인터만 바꾸고 node에 있는 정보는 삭제 하지 않음.
       - 그렇기에 node의 포인터들은 원래 자기가 들어가 있던 위치를 알고 있고, 노드의 위치만 알고 있어서 쉽게 자기 위치로 다시 삽입 가능.
-      - 물론 이 방법은 이전 노드나 이후 노드 또한 삭제된 상태에서 수행 하면 리스트를 망가 뜨리기 때문에, 항상 삭제한 순서의 반대로 복구가 이루어 질때 만 가능
+      - 물론 이 방법은 이전 노드나 이후 노드 또한 삭제된 상태에서 수행 하면 리스트를 망가 뜨리기 때문에,
+      항상 삭제한 순서의 반대로 복구가 이루어 질때 만 가능
       
   ```c++
     
@@ -233,7 +239,8 @@ int main()
 
 예제 입출력 설명
 
-병사들은 1~6번까지, 원 형태로 앉아 있습니다. 이제 1번부터 2명이 남을 때까지 차례대로 죽여 나갈 건데, 아래 표에서 죽인다면, X를 표시해보도록 하지요. 또한, O는 죽어야 하는 놈을 가리키는 인덱스라고 하겠습니다.
+병사들은 1~6번까지, 원 형태로 앉아 있습니다. 이제 1번부터 2명이 남을 때까지 차례대로 죽여 나갈 건데, 아래 표에서 죽인다면
+, X를 표시해보도록 하지요. 또한, O는 죽어야 하는 놈을 가리키는 인덱스라고 하겠습니다.
 
 
 1명 쨰,
@@ -265,7 +272,8 @@ int main()
    
    - 연결 리스트로 풀 수 있는 전형적인 문제
    
-    - 원형으로 연결된 연결 리스트 위에서 이번에 죽을 사람을 포인터 kill을 유지하면서, 이 포인터가 가리키는 사람을 죽이고 포인터를 K-1번 앞으로 옮기는 방식으로 구현
+    - 원형으로 연결된 연결 리스트 위에서 이번에 죽을 사람을 포인터 kill을 유지하면서, 이 포인터가 가리키는 사람을 죽이고
+    포인터를 K-1번 앞으로 옮기는 방식으로 구현
     - 한사람 죽을 때 마다 포인터를 K-1번 옮기기 때문에, 전체 시간 복잡도는 O(NK)
     - 이 문제는 N,K가 모두 1000 이하의 값이기 때문에 충분히 시간안에 끝낼수 있다.
     - 한가지 문제되는 점은 표준 라이브러리에서 원형으로 연결된 연결 리스트를 제공하지 않는다.
