--- a/doc/ch18/ch18.md
+++ b/doc/ch18/ch18.md
@@ -27,7 +27,8 @@ ______________
 주어진 원소를 배열의 맨 끝에 추가함으로써 크기를 1 늘리는 append() 연산을 지원합니다. 이 동작을 수행 하는 데는 상수 시간이 걸립니다.
 이와 같은 연산들을 구현하기 위해 동적 배열은 동적으로 할당 받은 배열을 사용
 
-  2. 동적 배열의 크기가 바뀌어야 할 때는 단순하게 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 참조하도록 바꿔치기 합니다.
+  2. 동적 배열의 크기가 바뀌어야 할 때는 단순하게 새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고,
+  새 배열을 동적으로 할당 받은 뒤 기존 원소들을 복사하고, 새 배열을 참조하도록 바꿔치기 합니다.
   
  - 따라서 동적 배열 클래스는 현재 배열을 가리키는 포인터를 다음과 같이 저장
  
@@ -206,7 +207,8 @@ int main()
        
        - 11장 조합 탐색에서 사용됨.
         - 조합 탐색에서는 답의 한 조각을 만들고, 현재의 상태를 갱신한 뒤 나머지를 재귀 호출로 해결.
-        - 재귀 호출이 끝난 후 문제의 상태는 다시 복구되어야 하는 데 되돌리기 연산을 통해 문제의 상태를 되돌리기 작업을 효율적으로 할 수 있음
+        - 재귀 호출이 끝난 후 문제의 상태는 다시 복구되어야 하는 데 되돌리기 연산을 통해 문제의 상태를 되돌리기 작업을
+        효율적으로 할 수 있음
         - 이와 같은 장접을 활용한 기법 : 커누스가 이름 붙인 "춤추는 링크들" 이란 기법이 있음.
        
        
@@ -246,39 +248,50 @@ int main()
 1명 쨰,
 
 | 1 | 2 | 3 | 4 | 5 | 6 |
+
 | X |   |   |   |   |   |
+
 | O |   |   |   |   |   |
 
 
 2명 째,
 
 | 1 | 2  | 3  | 4 | 5 | 6 |
+
 | X |    |    | X |   |   |
+
 |   | -> | -> | O |   |   |
 
 3명 째,
 
 | 1 | 2 | 3 | 4 | 5  | 6  |
+
 | X | X |   | X |    |    |
+
 |   | O |   |   | -> | -> |
 
 4명 째,
 
 | 1 | 2 | 3  | 4 | 5  | 6 |
+
 | X | X |    | X |    | X |
+
 |   |   | -> |   | -> | O |
+
    
    ## 18.6 풀이 : 조세푸스 문제
    
    - 연결 리스트로 풀 수 있는 전형적인 문제
    
-    - 원형으로 연결된 연결 리스트 위에서 이번에 죽을 사람을 포인터 kill을 유지하면서, 이 포인터가 가리키는 사람을 죽이고
-    포인터를 K-1번 앞으로 옮기는 방식으로 구현
+    - 원형으로 연결된 연결 리스트 위에서 이번에 죽을 사람을 포인터 kill을 유지하면서, 이 포인터가 가리키는 사람을
+    죽이고 포인터를 K-1번 앞으로 옮기는 방식으로 구현
     - 한사람 죽을 때 마다 포인터를 K-1번 옮기기 때문에, 전체 시간 복잡도는 O(NK)
     - 이 문제는 N,K가 모두 1000 이하의 값이기 때문에 충분히 시간안에 끝낼수 있다.
     - 한가지 문제되는 점은 표준 라이브러리에서 원형으로 연결된 연결 리스트를 제공하지 않는다.
       - 하지만 포인터가 리스트의 끝에 도달하면 처음으로 옮겨 주는 연산을 통해 원형 리스트를 흉내 낼수 있음.
       - 아래 코드를 보면 literator 가 끝에 도달하는 지 확인해서 처음으로 옮겨 주는 것을 볼수 있음.
+      
+      ***
    
 ``` C++
 void josephus(int n, int k) {
@@ -302,3 +315,5 @@ void josephus(int n, int k) {
     }
 
 ```
+    ***
+    
