--- a/doc/ch18/ch18.md
+++ b/doc/ch18/ch18.md
@@ -1,8 +1,12 @@
+# 선형 자료 구조
+
+
 ## ch18.1 도입
 
 - 가장 기초적인 자료 구조 : 배열
 
-- 배열 + 효율적인 작업 : 동적 배열, 링크드 리스트
+  - 배열의 비효율 적이거나 할 수 없는 작업들을 개선한 자료 구조 
+  -> 동적 배열, 링크드 리스트
 ______________
 
 ## ch18.2 동적 배열
