--- a/doc/ch18/ch18.md
+++ b/doc/ch18/ch18.md
@@ -321,3 +321,6 @@ void josephus(int n, int k) {
 ```
     ***
     
+
+** 동적계획법 문제
+https://statkclee.github.io/r-algorithm/r-josephus-problem.html
